# rinoedu

./: .gitignore  404.html  Run.bat  RunServer.ps1  auth_api_spec.json  auth_schemas_spec.json  extract.js  extract_auth_api.js  extract_auth_schemas.js  index.html  parse_all_paths.js  parse_schemas.js  parse_swagger.js  parse_urls.js  runtime-config.example.js  swagger-ui-init.js  swagger_auth_paths.json  swagger_auth_schemas.json  swagger_paths_list.txt  tailwind.config.js
.github/workflows/: ci.yml  deploy-cloudflare.yml  deploy-pages.yml
agents/: .env.example  knowledge_hub_phase3.txt  main.py  pyproject.toml  run.bat  setup.bat  ticket_task_prompt.txt
agents/config/: agents.yaml  tasks.yaml
agents/src/rinoedu_factory/: __init__.py  crew.py
agents/src/rinoedu_factory/tools/: __init__.py  doc_writer.py  file_writer.py  git_tool.py  mock_server.py
agents/workflows/: ai_system_rules.md
docs/: README.md
docs/architecture/: whitepaper.md
docs/comms/: comms-chat-api.md  context-aware-ai-payload.md  knowledge-hub-library-ui.md  openai-api-error-handling.md  ticket-management.md
docs/developer/: guide.md  platform-integrations.md
docs/product/: overview.md
docs/user-manual/: admin.md  student.md  teacher.md
mock-server/: db.json  package-lock.json  package.json
public/: index.html
public/src/: app.jsx
rino/: package-lock.json  package.json  wrangler.toml
rino/src/: build_wp.js  index.js  whitepaper.js
rinoapp-mcp/: package-lock.json  package.json  test-ai.js  wrangler.toml
rinoapp-mcp/src/: index.js
src/: app.jsx
supabase/: schema.sql
(+68 files in other folders)
